# covalt-provider-plugins

./: .gitignore  README.md  index.json
plugins/claude-oauth/: Cargo.toml  oauth.py  plugin.py  provider.yaml
plugins/claude-oauth/api/: provider.py
plugins/claude-oauth/src/: auth.rs  lib.rs  main.rs  prepare.rs
plugins/gemini-cli-oauth/: README.md  oauth.py  plugin.py  provider.yaml
plugins/gemini-cli-oauth/api/: provider.py
plugins/sample-code-provider/: plugin.py  provider.yaml
plugins/sample-openai-adapter/: provider.yaml
plugins/windsurf-oauth/: Cargo.toml  README.md  provider.yaml
plugins/windsurf-oauth/src/: auth.rs  lib.rs  main.rs  models.rs
plugins/windsurf-oauth/src/cloud/: auth.rs  catalog.rs  chat.rs  metadata.rs  mod.rs  wire.rs
plugins/xai-oauth/: Cargo.toml  README.md  provider.yaml
plugins/xai-oauth/api/: provider.py
plugins/xai-oauth/src/: auth.rs  main.rs  models.rs
