# Standalone crate: installed copies live outside the Covalt workspace.
[workspace]

[package]
name = "windsurf-provider"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "windsurf-provider"
path = "src/main.rs"

[[bin]]
name = "windsurf-smoke"
path = "src/bin/smoke.rs"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
covalt-provider-sdk = { git = "https://github.com/sethburkart123/covalt", rev = "d41910a21290d13cbe9d065c6c9082565efe2ea9" }
flate2 = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["v4"] }
